Fix overflow on PR description

--- a/app/styles/details/_pull_request.scss
+++ b/app/styles/details/_pull_request.scss
@@ -11,19 +11,19 @@
     margin-right: 18px;
   }
 
-  .pull-summary {
-    float: left;
-    margin: 0;
-  }
-
   .pull-head-meta {
     float: right;
+    margin-left: 18px;
 
     a {
       font-weight: bold;
       color: inherit;
       text-decoration: none;
     }
+  }
+
+  .pull-summary {
+    margin: 0;
   }
 }
 
