--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,3 +38,9 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.css-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
